temporary fix for colorlegend ordinal values, truncate them

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -38,7 +38,7 @@ html, body {
 }
 
 #colorpanel {
-  height: 25px;
+  height: 20px;
 }
 
 /* large twipsy */
